# disclog-py

./: README.md  pyproject.toml
src/disclog/: __init__.py  disclog.py
